--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<title>FOOSESHOES</title>
 </head>
 <body>	
-
 	<div class="bg col-12 mx-0 w-100 ">
 		<div class="container">
 			<div class="row mr-0">
@@ -26,11 +25,20 @@
 			</div>
 		</div>
 	</div>	
-
-	<div class="row col-12 d-flex justify-content-around mx-0 border-box">
-		<div class="col-3 border-left text-center mx-0">
-			<i class="fas fa-bars"></i>
-		</div>
+	<nav class="navbar navbar-expand-md navbar-light bg-light">	  
+	 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  	</button>
+		 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		    <div class="navbar-nav">
+		      	<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+		      	<a class="nav-item nav-link" href="#">Products</a>
+		     	<a class="nav-item nav-link" href="#">About</a>
+		     	<a class="nav-item nav-link " href="#">Pages</a>
+		     	<a class="nav-item nav-link " href="#">Blog</a>
+		     	<a class="nav-item nav-link " href="#">Contact</a>
+		    </div>
+	  	</div>
 		<div class="col-3 border-left text-center mx-0">				
 			<i class="fas fa-search"></i>			
 		</div>
@@ -42,8 +50,7 @@
 			<i class="fab fa-opencart pt-1"></i>
 			<span class="bg-success text-white rounded px-1 ml-auto">0</span>
 		</div>
-	</div>		
-
+	</nav>
 
 
 
