--- a/index.html
+++ b/index.html
@@ -9,54 +9,43 @@
 	<title>FOOSESHOES</title>
 </head>
 <body>	
-	<div class="bg col-12 mx-0 w-100 ">
-		<div class="container">
-			<div class="row mr-0">
-				<div>
-					<div><a href="index.html">FOOSESHOES</a></div>
-				</div>				
-				<div class="ml-auto">
-					<ul class="row text-secondary">
-						<li><a href="#">Login</a></li>
-						<span> or </span>
-						<li><a href="#">Register</a></li>
-					</ul>					
-				</div>	
+	
+	<header class="bg-dark w-100 mx-0 text-info">
+		<div class="nine d-flex justify-content-between">
+			<div class="h3 d-flex">FOOSESHOES</div>
+			<div class="d-flex my-auto">
+				<div>LOGIN</div>
+				<div class="px-1"> or </div>
+				<div>REGISTER</div>
 			</div>
-		</div>
-	</div>	
-	<nav class="navbar navbar-expand-md navbar-light bg-light">	  
-	 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  	</button>
-		 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-		      	<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-		      	<a class="nav-item nav-link" href="#">Products</a>
-		     	<a class="nav-item nav-link" href="#">About</a>
-		     	<a class="nav-item nav-link " href="#">Pages</a>
-		     	<a class="nav-item nav-link " href="#">Blog</a>
-		     	<a class="nav-item nav-link " href="#">Contact</a>
-		    </div>
-	  	</div>
-		<div class="col-3 border-left text-center mx-0">				
-			<i class="fas fa-search"></i>			
-		</div>
-		<div class="col-3 border-left text-center mx-0">
-			<i class="far fa-star pt-1"></i>
-			<span class="bg-secondary rounded text-white pt-0">30</span>
-		</div>
-		<div class="col-3 border-left border-right row text-center mx-0">
-			<i class="fab fa-opencart pt-1"></i>
-			<span class="bg-success text-white rounded px-1 ml-auto">0</span>
-		</div>
+		</div>	
+	</header>
+		
+	<nav class="navbar navbar-expand-md navbar-light bg-white flex-row pr-0">
+		<div class="row col-12 d-flex justify-content-around mx-0 border-box navbar-brand pr-0">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav">
+				    <a class="nav-item nav-link border-left" href="#">Home</a>
+				    <a class="nav-item nav-link border-left" href="#">Products</a>
+				    <a class="nav-item nav-link border-left" href="#">About</a>
+				    <a class="nav-item nav-link border-left" href="#">Pages</a>
+				    <a class="nav-item nav-link border-left" href="#">Blog</a>
+				    <a class="nav-item nav-link border-left border-right " href="#">Contact</a>
+				</div>
+			</div>
+			<div class="nav-item nav-link border-left">
+				<i class="far fa-star"></i>
+				<span>30</span>
+			</div>
+			<div class="nav-item nav-link pr-0 border-left border-right">
+				<i class="fab fa-opencart"></i>
+				<span>0</span>
+			</div>
+		</div>		
 	</nav>
-
-
-
-
-
-
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
