--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
 </head>
 <body>	
 	
-	<header class="bg-dark w-100 mx-0 text-info">
+	<!------------------------------- TOP ------------------------------------------->
+
+	<header class="bg-dark w-100 mx-0 text-info ">
 		<div class="nine d-flex justify-content-between">
-			<div class="h3 d-flex">FOOSESHOES</div>
+			<div class="h3 d-flex my-auto">FOOSESHOES</div>
 			<div class="d-flex my-auto">
-				<div>LOGIN</div>
-				<div class="px-1"> or </div>
-				<div>REGISTER</div>
+				<div class="nav-link">
+					<i class="fas fa-search"></i>	
+				</div>		
+				<div class="nav-link">LOGIN</div>
+				<div class="my-auto px-1"> or </div>
+				<div class="nav-link">REGISTER</div>
 			</div>
 		</div>	
 	</header>
+
+	<!---------------------------- NAVIGATION -------------------------------------->
 		
 	<nav class="navbar navbar-expand-md navbar-light bg-white flex-row pr-0">
 		<div class="row col-12 d-flex justify-content-around mx-0 border-box navbar-brand pr-0">
@@ -36,19 +43,212 @@
 				    <a class="nav-item nav-link border-left border-right " href="#">Contact</a>
 				</div>
 			</div>
-			<div class="nav-item nav-link border-left">
+			<div class="nav-item nav-link border-left position-sticky">
 				<i class="far fa-star"></i>
 				<span>30</span>
 			</div>
-			<div class="nav-item nav-link pr-0 border-left border-right">
+			<div class="nav-item nav-link border-left border-right position-sticky">
 				<i class="fab fa-opencart"></i>
 				<span>0</span>
 			</div>
 		</div>		
 	</nav>
 
+	<!--------------------------------------------- SLIDER ------------------------------------------------>
+
+	<!-- SLIDE 1 -->
+
+		<div class="slider w-100">
+			<ul class="slider-list px-0">
+				<li class="main-list">
+					<img class="w-100" src="images/slider-image1.jpg" alt="slide1">
+
+					<div class="image-text">
+						<h5 class="btn bg-success">$145.99</h5>
+						<h2>pink shoes <br>	2013 collections</h2>
+						<h5>Nunc non fermentum nunc. Sed ut ante <br> eget leo tempor consequat</h5>
+						<h2>
+							<a href="" class="bg-white btn"><i class="far fa-eye"></i></a>
+							<a href="" class="bg-white btn"><i class="far fa-star"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-share-square"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-cart-arrow-down"></i></a>
+						</h2>
+
+					</div>
+				</li>
+			</ul>
+		</div>
+
+		<!-- SLIDE 2 -->
+
+		<div class="slider w-100">
+			<ul class="slider-list px-0">
+				<li class="main-list">
+					<img class="w-100" src="images/slider-image2.jpg" alt="slide1">
+
+					<div class="image-text">
+						<h5 class="btn bg-success">$75.99</h5>
+						<h2>Anna Field <br>	2015 collections</h2>
+						<h5>Nunc non fermentum nunc. Sed ut ante <br> eget leo tempor consequat</h5>
+						<h2>
+							<a href="" class="bg-white btn"><i class="far fa-eye"></i></a>
+							<a href="" class="bg-white btn"><i class="far fa-star"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-share-square"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-cart-arrow-down"></i></a>
+						</h2>
+
+					</div>
+				</li>
+			</ul>
+		</div>
+
+		<!-- SLIDE 3 -->
+
+		<div class="slider w-100">
+			<ul class="slider-list px-0">
+				<li class="main-list">
+					<img class="w-100" src="images/slider-image3.jpg" alt="slide1">
+
+					<div class="image-text">
+						<h5 class="btn bg-success">$276.99</h5>
+						<h2>Prada <br>	2016 collections</h2>
+						<h5>Nunc non fermentum nunc. Sed ut ante <br> eget leo tempor consequat</h5>
+						<h2>
+							<a href="" class="bg-white btn"><i class="far fa-eye"></i></a>
+							<a href="" class="bg-white btn"><i class="far fa-star"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-share-square"></i></a>
+							<a href="" class="bg-white btn"><i class="fas fa-cart-arrow-down"></i></a>
+						</h2>
+
+					</div>
+				</li>
+			</ul>
+		</div>
+
+		<!-- SLIDE CONTROLLER -->
+
+		<div class="slider-tabs bg-secondary">
+			<ul class="d-flex justify-content-around text-light text-center p-0 m-0">	                        
+					<li><span>pink shoes</span><p>now of $145.99</p></a></li>
+	                <li><span>anns field</span><p>limited edition</p></li>
+	                <li><span>prada</span><p>summer is coming</p></li>                        
+	        </ul>
+        </div>
+
+        <!------------------------------------------------- HOMEPAGE ------------------------------------------>
+
+		<div class="d-flex justify-content-between bg-dark">
+			<div class="d-flex justify-content-around container">
+				<div class="main-list">
+					<img src="images/img1.jpg" alt=""/>
+				    <span class="btn absolute-class bg-dark">on sale</span>
+				</div>
+				<div class="main-list">
+					<img src="images/img2.jpg" alt=""/>
+					<span class="btn absolute-class bg-dark">special offers</span>
+				</div>
+				<div class="main-list">
+					<img src="images/img3.jpg" alt=""/>
+					<span class="btn absolute-class bg-dark">must have</span>
+				</div>
+			</div>			
+		</div>
+
+		
+		<div class="bg-secondary">
+			<div class="container">
+
+			<h3>New Arrivals on FooseShoes</h3>
+			<div class="text-center d-flex justify-content-between">			
+				<div>
+					<img src="images/pic1.jpg" alt="Card 1">
+					<div>
+					    <h5>Even & Odd</h5>
+					</div>
+				</div>
+				<div>
+					<img src="images/pic2.jpg" alt="Card 2">
+					<div>
+					    <h5>Even & Odd</h5>
+					</div>
+				</div>
+				<div>
+					<img src="images/pic3.jpg" alt="Card 3">
+					<div>
+					   	<h5>Buffalo Decoletté</h5>				    
+					</div>
+				</div>			
+			</div>
+
+			<h3>Best Sellers of the Month</h3>
+			<div class="text-center d-flex justify-content-between">			
+				<div>
+					<img src="images/pic4.jpg" alt="Card 1">
+					<div>
+					    <h5>Even & Odd</h5>
+					</div>
+				</div>
+				<div>
+					<img src="images/pic5.jpg" alt="Card 2">
+					<div>
+					    <h5>Even & Odd</h5>
+					</div>
+				</div>
+				<div>
+					<img src="images/pic6.jpg" alt="Card 3">
+					<div>
+					   	<h5>Buffalo Decoletté</h5>				    
+					</div>
+				</div>			
+			</div>
+
+			<hr>
+
+			<div class="d-flex justify-content-between">
+				<div class="col-3">
+					<h6>FREE SHIPPING</h6>
+					<p>Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel</p>
+				</div>
+				<div class="col-3">
+					<h6>TESTIMONIALS</h6>
+					<p>vel, vulputate vel nibh. Class aptent taciti sociosqu ad litora <br> -John Doe-</p>
+				</div>
+				<div class="col-6">
+
+					<h6>BLOG NEWS</h6>
+
+					<div class="container d-flex justify-content-around">
+						<span class="btn col-2">Apr<br>01</span>
+						<div><strong>Nice & clean. The best for you blog!</strong><br>
+Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel </div>
+					</div>
+
+					<div class="container d-flex justify-content-around">
+						<span class="btn col-2">Apr<br>01</span>
+						<div><strong>NANDO PAPPALARDO</strong><br>
+Vivamus metus turpis, bibendum vitae euismod vel, vulputate vel nibh.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>	
+
+		<!------------------------------------------------- FOOTER ------------------------------------------------->
+
+
+
+
+		
+
+	
+
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>	
+	<script type="text/javascript" src="script/script.js"></script>
+
 </body>
 </html>
